# license_tools

./: .flake8  .gitignore  .readthedocs.yaml  CHANGELOG.md  MANIFEST.in  README.md  pyproject.toml  requirements.txt  setup.py
.github/: dependabot.yml
.github/workflows/: ci.yml  release.yml  zizmor.yml
docs/: .gitignore  api.rst  conf.py  index.rst  prepare_importlib_metadata_inv.py
license_tools/: __main__.py  constants.py  font_tools.py  linking_tools.py  retrieval.py  scancode_tools.py
license_tools/tools/: cargo_tools.py  font_tools.py  image_tools.py  linking_tools.py  pip_tools.py  rpm_tools.py  scancode_tools.py  translation_tools.py
license_tools/utils/: archive_utils.py  download_utils.py  path_utils.py  rendering_utils.py
tests/: __init__.py  data.py  test_constants.py  test_font_tools.py  test_linking_tools.py  test_main.py  test_retrieval.py  test_scancode_tools.py
tests/files/: Carlito-Regular.ttf.ABOUT  Font Awesome 6 Free-Regular-400.otf.ABOUT  LICENSE.md  LICENSE_Carlito-Regular.txt  LICENSE_Maki.txt  LICENSE_django_mo.txt  LICENSE_meson-generated_ieee754.txt  LICENSE_mountain.txt  LICENSE_otf.cff.txt  Maki.eot  Maki.eot.ABOUT  Sniglet-Regular.ttf.ABOUT  croissant.NOTICE  croissant.jpg.ABOUT  django_mo.po  django_mo.po.ABOUT  fa-solid-900.woff2.ABOUT  meson-generated_ieee754.NOTICE  meson-generated_ieee754.c.o.ABOUT  mountain.jpg.ABOUT  otf.cff  otf.cff.ABOUT  setup.py  untranslated.po  weather-icons.NOTICE  weathericons-regular-webfont.woff.ABOUT
tests/tools/: test_cargo_tools.py  test_font_tools.py  test_image_tools.py  test_linking_tools.py  test_pip_tools.py  test_rpm_tools.py  test_scancode_tools.py  test_translation_tools.py
tests/utils/: test_archive_utils.py  test_download_utils.py  test_path_utils.py  test_rendering_utils.py
