# Copyright (c) stefan6419846. All rights reserved.
# SPDX-License-Identifier: Apache-2.0
# See http://www.apache.org/licenses/LICENSE-2.0 for the license text.

[build-system]
requires = [
    "setuptools",
    "wheel"
]
build-backend = "setuptools.build_meta"

[project]
name = "license_tools"
description = "Collection of tools for working with Open Source licenses"
version = "0.13.1"
license = {text = "Apache-2.0"}
readme = {file = "README.md", content-type = "text/markdown"}
authors = [
    {name = "stefan6419846"},
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Topic :: Software Development",
    "Topic :: Utilities",
    "Typing :: Typed",
]
keywords = [
    "open source",
    "license",
    "package",
    "dependency",
    "licensing"
]
requires-python = ">=3.9, <4"
dependencies = [
    "scancode-toolkit>=32.3.0",
    "typecode-libmagic",
    "joblib",
    "fontTools[woff]",
    "pip-licenses-lib>=0.4.0",
    "requests",
    "tomli",
]

[project.urls]
Homepage = "https://github.com/stefan6419846/license_tools"
Documentation = "https://license-tools.readthedocs.io/"
Repository = "https://github.com/stefan6419846/license_tools"
Issues = "https://github.com/stefan6419846/license_tools/issues"
Changelog = "https://github.com/stefan6419846/license_tools/blob/main/CHANGELOG.md"

[project.optional-dependencies]
dev = [
    "codespell",
    "coverage",
    "flake8",
    "flake8-bugbear",
    "pep8-naming",
    "mypy",
    "types-requests",
]
extended_rpm = [
    "rpmfile>=2.1.0",
]
docs = [
    "sphinx",
    "furo",
]

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["."]
include = [
    "license_tools",
    "license_tools.*"
]
namespaces = false

[tool.codespell]
check-hidden = true
skip = "./.git*,./.mypy_cache/*,./todo/*"

[tool.coverage.run]
branch = true
parallel = true  # Due to `joblib` for `MainTestCase.test_retrieval`
source = [
    "license_tools",
]

[tool.mypy]
strict = true
files = "license_tools,tests"
exclude = ["^tests/files/setup\\.py$"]
